Port from KPrinter to QPrinter, remove dependency to KDE4_KDEPRINT_LIBS.

--- a/kugar/lib/CMakeLists.txt
+++ b/kugar/lib/CMakeLists.txt
@@ -24,7 +24,7 @@ set(kugarlib_LIB_SRCS
 
 kde4_add_library(kugarlib SHARED ${kugarlib_LIB_SRCS})
 
-target_link_libraries(kugarlib  ${KDE4_KDEPRINT_LIBS} ${QT_QT3SUPPORT_LIBRARY})
+target_link_libraries(kugarlib  ${KDE4_KIO_LIBS} ${QT_QT3SUPPORT_LIBRARY})
 
 set_target_properties(kugarlib PROPERTIES VERSION ${GENERIC_KOFFICE_LIB_VERSION} SOVERSION ${GENERIC_KOFFICE_LIB_SOVERSION} )
 install(TARGETS kugarlib  DESTINATION ${LIB_INSTALL_DIR})
