--- a/kugar/part/CMakeLists.txt
+++ b/kugar/part/CMakeLists.txt
@@ -12,7 +12,7 @@ kde4_add_plugin(kugarpart WITH_PREFIX ${kugarpart_PART_SRCS})
 
 
 
-target_link_libraries(kugarpart  kugarlib ${KDE4_KDEPRINT_LIBS} komain )
+target_link_libraries(kugarpart  kugarlib ${KDE4_KIO_LIBS} komain )
 
 install(TARGETS kugarpart  DESTINATION ${PLUGIN_INSTALL_DIR})
 
