SVN_SILENT made messages (.desktop file)

--- a/filters/kword/ascii/kword_ascii_export.desktop
+++ b/filters/kword/ascii/kword_ascii_export.desktop
@@ -18,7 +18,7 @@ Name[es]=Filtro de exportación ASCII de KWord
 Name[et]=Kwordi ASCII ekspordifilter
 Name[eu]=KWord-en Ascii esportaziorako iragazkia
 Name[fa]=پالایۀ صادرات KWord Ascii
-Name[fi]=KWord ascii -vientisuodin
+Name[fi]=KWord Asciii -vientisuodin
 Name[fr]=Filtre d'exportation ASCII de KWord
 Name[ga]=Scagaire Easpórtála ASCII KWord
 Name[gl]=Filtro de Exportación de Ascii para KWord
