--- a/kpresenter/templates/Screenpresentations/BlueBreezeSingle.desktop
+++ b/kpresenter/templates/Screenpresentations/BlueBreezeSingle.desktop
@@ -58,6 +58,7 @@ Comment[el]=Μια ήρεμη παρουσίαση με τίτλο και μια
 Comment[es]=Una presentación tranquila con un título y una gran área de texto
 Comment[et]=Lihtne esitlus pealkirja ja ühe suure tekstialaga
 Comment[fa]=ارائه‌ای آرام با یک عنوان و تک‌متن بزرگ
+Comment[fi]=Rauhallinen esitys, joka käyttää otsikkoa ja yhtä suurta tekstikenttää
 Comment[fr]=Une présentation apaisée avec un titre et un seul grand texte
 Comment[gl]=Unha presentación cun título e unha única área de texto grande
 Comment[he]=מצגת שלווה עם כותרת ואיזור גדול לתמונה
