--- a/kpresenter/templates/Screenpresentations/classroom.desktop
+++ b/kpresenter/templates/Screenpresentations/classroom.desktop
@@ -8,6 +8,7 @@ Name[de]=Klassenraum
 Name[el]=Σχολική τάξη
 Name[et]=Klassituba
 Name[fa]=کلاس
+Name[fi]=Luokkahuone
 Name[fr]=Salle de classe
 Name[ga]=Seomra Ranga
 Name[gl]=Aula
@@ -44,6 +45,7 @@ Comment[el]=Παρουσίαση σχολικής τάξης από dannya
 Comment[es]=Classroom por dannya
 Comment[et]='dannya' loodud klassituba
 Comment[fa]=کلاس با dannya
+Comment[fi]=Luokkahuone, tehnyt dannya
 Comment[fr]=Salle de classe, par Dannya
 Comment[gl]=Aula por dannya
 Comment[hu]=Osztályterem, készítette: dannya
