--- a/kpresenter/templates/Screenpresentations/kde.desktop
+++ b/kpresenter/templates/Screenpresentations/kde.desktop
@@ -16,7 +16,7 @@ Comment[el]=Μια παρουσίαση με το αρχικό θέμα του K
 Comment[es]=Una presentación con el tema original de KDE
 Comment[et]=KDE algupärase teemaga esitlus
 Comment[fa]=ارائه‌ای با چهرۀ اصلی KDE
-Comment[fi]=Esitys alkuperäisiellä KDE-teemalla
+Comment[fi]=Esitys alkuperäisellä KDE-teemalla
 Comment[fr]=Une présentation avec un thème KDE original
 Comment[gl]=Unha presentación cun estilo orixinal para KDE
 Comment[he]=מצגת עם ערכת נושא מקורית של KDE
