--- a/kpresenter/templates/common_desktop/OneColumnLandscape.desktop
+++ b/kpresenter/templates/common_desktop/OneColumnLandscape.desktop
@@ -75,6 +75,7 @@ Comment[el]=Παρουσίαση με τίτλο μίας σελίδας και 
 Comment[es]=Presentación con un título de página y un área grande de texto
 Comment[et]=Esitlus lehekülje pealkirja ja ühe suure tekstialaga
 Comment[fa]=ارائه‌ای با یک عنوان صفحه و ناحیۀ متن بزرگ و تک
+Comment[fi]=Esitys, jossa otsikko ja yksi suuri tekstikenttä
 Comment[fr]=Présentation avec un titre de page et un seul grand texte
 Comment[gl]=Presentación con título de páxina e unha única área de texto grande
 Comment[he]=מצגת עם כותרת עמוד ואיזור גדול לטקסט
