--- a/kpresenter/templates/common_desktop/emptyPortrait.desktop
+++ b/kpresenter/templates/common_desktop/emptyPortrait.desktop
@@ -58,6 +58,7 @@ Comment[el]=Κενή παρουσίαση (διάταξη πορτραίτου)
 Comment[es]=Presentación vacía (orientación vertical)
 Comment[et]=Tühi esitlus (püstpaigutus)
 Comment[fa]=ارائۀ خالی )جهت طولی(
+Comment[fi]=Tyhjä esitys (pystysuuntainen)
 Comment[fr]=Présentation vide (portrait)
 Comment[gl]=Presentación valeira (orientada en vertical)
 Comment[hu]=Üres bemutató (álló tájolású)
