--- a/kword/templates/Wordprocessing/ColorfulA4.desktop
+++ b/kword/templates/Wordprocessing/ColorfulA4.desktop
@@ -53,6 +53,7 @@ Comment[en_GB]=A two-column template with stylishly coloured headers and footers
 Comment[es]=Una plantilla con dos columnas con encabezados y pies con colores elegantes
 Comment[et]=Kahe veeruga dokument stiilselt värviliste päiste ja jalustega
 Comment[fa]=قالب دو ستونی با عناوین و زیرنویسهای رنگی شیک
+Comment[fi]=Kaksipalstainen pohja, tyylikäät värilliset ylä- ja alatunnisteet
 Comment[fr]=Un modèle à deux colonnes avec des en-têtes colorées et des pieds de page
 Comment[gl]=Un modelo a dúas colunas, con cabeceiras e rodapés con estilos coloridos
 Comment[hu]=Kétoszlopos sablon stílusos, színes fejléccel és lábléccel
