--- a/kword/templates/Wordprocessing/Letter.desktop
+++ b/kword/templates/Wordprocessing/Letter.desktop
@@ -51,6 +51,7 @@ Comment[el]=Δημιουργεί ένα κενό έγγραφο US Letter.
 Comment[es]=Crea un documento vacío tamaño US Letter.
 Comment[et]=Loob tühja US Letter dokumendi.
 Comment[fa]=سند خالی حروف امریکایی را ایجاد می‌کند.
+Comment[fi]=Luo tyhjän US Letter -asiakirjan
 Comment[fr]=Crée un document US Letter vide.
 Comment[gl]=Cría un documento vacío para unha páxina Carta dos EUA.
 Comment[he]=יצירת מכתב אמריקאי ריק
