--- a/mimetypes/kde33/vnd.oasis.opendocument.formula.desktop
+++ b/mimetypes/kde33/vnd.oasis.opendocument.formula.desktop
@@ -16,6 +16,7 @@ Comment[es]=Fórmula de OASIS OpenDocument
 Comment[et]=OASIS OpenDocument valem
 Comment[eu]=OASIS OpenDocument formula
 Comment[fa]=فرمول OASIS OpenDocument
+Comment[fi]=OASIS OpenDocument -kaava
 Comment[fr]=Formule OASIS OpenDocument
 Comment[ga]=Foirmle OpenDocument OASIS
 Comment[gl]=Fórmula OASIS OpenDocument
