--- a/mimetypes/kde33/vnd.oasis.opendocument.graphics-template.desktop
+++ b/mimetypes/kde33/vnd.oasis.opendocument.graphics-template.desktop
@@ -16,6 +16,7 @@ Comment[es]=Plantilla de gráficos de OASIS OpenDocument
 Comment[et]=OASIS OpenDocument graafikamall
 Comment[eu]=OASIS OpenDocument-en grafikoen txantiloia
 Comment[fa]=قالب نگاره‌سازی OASIS OpenDocument
+Comment[fi]=OASIS OpenDocument -grafiikkapohja
 Comment[fr]=Modèle de graphiques OASIS OpenDocument
 Comment[ga]=Teimpléad Grafaice OpenDocument OASIS
 Comment[gl]=Modelo de Debuxo OASIS OpenDocument
