--- a/mimetypes/kde33/vnd.oasis.opendocument.presentation-template.desktop
+++ b/mimetypes/kde33/vnd.oasis.opendocument.presentation-template.desktop
@@ -16,6 +16,7 @@ Comment[es]=Plantilla de presentación de OASIS OpenDocument
 Comment[et]=OASIS OpenDocument esitlusemall
 Comment[eu]=OASIS OpenDocument aurkezpen-txantiloia
 Comment[fa]=قالب ارائۀ OASIS OpenDocument
+Comment[fi]=OASIS OpenDocument -esityspohja
 Comment[fr]=Modèle de présentation OASIS OpenDocument
 Comment[ga]=Teimpléad Láithreoireachta OpenDocument OASIS
 Comment[gl]=Modelo de Presentación OASIS OpenDocument
