--- a/mimetypes/kde33/vnd.oasis.opendocument.text-template.desktop
+++ b/mimetypes/kde33/vnd.oasis.opendocument.text-template.desktop
@@ -16,6 +16,7 @@ Comment[es]=Plantilla de texto de OASIS OpenDocument
 Comment[et]=OASIS OpenDocument tekstimall
 Comment[eu]=OASIS OpenDocument testu-txantiloia
 Comment[fa]=قالب متن OASIS OpenDocument
+Comment[fi]=OASIS OpenDocument -tekstimallipohja
 Comment[fr]=Modèle de texte OASIS OpenDocument
 Comment[ga]=Teimpléad Téacs OpenDocument OASIS
 Comment[gl]=Modelo de Texto OASIS OpenDocument
