--- a/filters/kword/latex/import/kword_latex_import.desktop
+++ b/filters/kword/latex/import/kword_latex_import.desktop
@@ -20,7 +20,7 @@ Name[es]=Filtro de importación de LaTeX de KWord
 Name[et]=KWordi LaTeX'i impordifilter
 Name[eu]=KWord-en LaTeX inportaziorako iragazkia
 Name[fa]=پالایۀ واردات KWord Latex
-Name[fi]=KWord Latex -tuontisuodin
+Name[fi]=KWord LaTeX -tuontisuodin
 Name[fr]=Filtre d'importation LaTeX de KWord
 Name[ga]=Scagaire Iompórtála LaTeX le haghaidh KWord
 Name[gl]=Filtro de Importación de Latex para KWord
