--- a/kpresenter/templates/Screenpresentations/CopperPlain.desktop
+++ b/kpresenter/templates/Screenpresentations/CopperPlain.desktop
@@ -56,6 +56,7 @@ Comment[el]=Μια κομψή, δυναμική παρουσίαση
 Comment[es]=Una presentación elegante y edificante
 Comment[et]=Elegantne esitlus
 Comment[fa]=ارائه‌ای زیبا و نشاط‌آور
+Comment[fi]=OASIS OpenDocument -esitys
 Comment[fr]=Une présentation élégante et joyeuse
 Comment[gl]=Unha presentación elegante
 Comment[hu]=Elegáns, felemelő bemutató
