--- a/kpresenter/templates/Screenpresentations/GradientBlueRed.desktop
+++ b/kpresenter/templates/Screenpresentations/GradientBlueRed.desktop
@@ -71,6 +71,7 @@ Comment[el]=Μια παρουσίαση με χρωματικό θέμα τον 
 Comment[es]=Una presentación cuyo tema es una tarde con nieve
 Comment[et]=Õhtutaeva teemaga esitlus
 Comment[fa]=ارائه‌ای تم‌شده برای آسمان عصر
+Comment[fi]=Iltataivaan mukaan suunniteltu esitys
 Comment[fr]=Une présentation pour le crépuscule
 Comment[gl]=Unha presentación con cores de solpor
 Comment[he]=מצגת עם ערכת נושא לשמי הערב
