--- a/kpresenter/templates/Screenpresentations/SnowyMountains.desktop
+++ b/kpresenter/templates/Screenpresentations/SnowyMountains.desktop
@@ -69,6 +69,7 @@ Comment[el]=Μια όμορφη και ομαλή παρουσίαση
 Comment[es]=Una presentación moderna y agradable
 Comment[et]=Külm ja karge esitlus
 Comment[fa]=ارائه‌ای آرام و ملایم
+Comment[fi]=Tyylikäs esitys
 Comment[fr]=Une présentation fraîche et plaisante
 Comment[gl]=Unha presentación novidosa e simples
 Comment[he]=מצגת מגניבה וחלקה
