--- a/kpresenter/templates/common_desktop/OneColumnPortrait.desktop
+++ b/kpresenter/templates/common_desktop/OneColumnPortrait.desktop
@@ -71,6 +71,7 @@ Comment[el]=Παρουσίαση με τίτλο μίας σελίδας και 
 Comment[es]=Presentación con un título de página y un área grande de texto (orientación vertical)
 Comment[et]=Esitlus lehekülje pealkirja ja ühe suure tekstialaga (püstpaigutus)
 Comment[fa]=ارائه‌ای با یک عنوان صفحه و ناحیۀ متن بزرگ و تک )جهت طولی(
+Comment[fi]=Esitys, jossa otsikko ja yksi suuri pystysuuntainen tekstikenttä
 Comment[fr]=Présentation avec un titre de page et un seul grand texte (portrait)
 Comment[gl]=Presentación con título de páxina é unha única área de texto (con orientación vertical)
 Comment[hu]=Bemutató címoldallal és egy nagyobb szövegterülettel (álló tájolású)
