--- a/kpresenter/templates/common_desktop/TwoColumnLandscape.desktop
+++ b/kpresenter/templates/common_desktop/TwoColumnLandscape.desktop
@@ -74,6 +74,7 @@ Comment[el]=Παρουσίαση με τίτλο μίας σελίδας και 
 Comment[es]=Presentación con un título de página y dos columnas de texto
 Comment[et]=Esitlus lehekülje pealkirja ja kahe tekstiveeruga
 Comment[fa]=ارائه با یک عنوان صفحه و دو ستون متن
+Comment[fi]=Esitys, jossa otsikko ja kaksi tekstipalstaa
 Comment[fr]=Présentation avec un titre de page et deux colonnes de texte
 Comment[gl]=Presentación cunha páxina de título e duas colunas de texto
 Comment[he]=מצגת עם כותרת עמוד ושתי עמודות
