--- a/kword/templates/Wordprocessing/TwoColumns.desktop
+++ b/kword/templates/Wordprocessing/TwoColumns.desktop
@@ -78,6 +78,7 @@ Comment[el]=Δημιουργεί ένα έγγραφο A4 με δύο στήλε
 Comment[es]=Crea un documento A4 con dos columnas por página.
 Comment[et]=Loob A4 dokumendi, igal leheküljel kaks veergu.
 Comment[fa]=یک سند A4 با دو ستون در هر صفحه ایجاد می‌کند.
+Comment[fi]=Luo kaksipalstaisen A4-asiakirjan 
 Comment[fr]=Crée un document A4 avec deux colonnes par page.
 Comment[ga]=Cruthaigh cáipéis A4 le dhá cholún sa leathanach.
 Comment[gl]=Cría un documento A4 con dúas colunas por páxina.
