--- a/mimetypes/kde33/vnd.oasis.opendocument.image.desktop
+++ b/mimetypes/kde33/vnd.oasis.opendocument.image.desktop
@@ -16,6 +16,7 @@ Comment[es]=Imagen de OASIS OpenDocument
 Comment[et]=OASIS OpenDocument pilt
 Comment[eu]=OASIS OpenDocument irudia
 Comment[fa]=تصویر OASIS OpenDocument
+Comment[fi]=OASIS OpenDocument- kuva
 Comment[fr]=Image OASIS OpenDocument
 Comment[ga]=Íomhá OpenDocument OASIS
 Comment[gl]=Imaxe OASIS OpenDocument
