--- a/mimetypes/kde33/vnd.oasis.opendocument.spreadsheet-template.desktop
+++ b/mimetypes/kde33/vnd.oasis.opendocument.spreadsheet-template.desktop
@@ -16,6 +16,7 @@ Comment[es]=Plantilla de hoja de cálculo de OASIS OpenDocument
 Comment[et]=OASIS OpenDocument arvutustabeli mall
 Comment[eu]=OASIS OpenDocument kalkulu-orrien txantiloia
 Comment[fa]=قالب صفحه گستردۀ OASIS OpenDocument
+Comment[fi]=OASIS OpenDocument -taulukkolaskentapohja
 Comment[fr]=Modèle de tableur OASIS OpenDocument
 Comment[ga]=Teimpléad Scarbhileoige OpenDocument OASIS
 Comment[gl]=Modelo de Folla de Cálculo OASIS OpenDocument
