--- a/mimetypes/kde33/vnd.oasis.opendocument.spreadsheet.desktop
+++ b/mimetypes/kde33/vnd.oasis.opendocument.spreadsheet.desktop
@@ -16,6 +16,7 @@ Comment[es]=Hoja de cálculo de OASIS OpenDocument
 Comment[et]=OASIS OpenDocument arvutustabel
 Comment[eu]=OASIS OpenDocument kalkulu-orria
 Comment[fa]=صفحه گستردۀ OASIS OpenDocument
+Comment[fi]=OASIS OpenDocument -taulukkolaskenta
 Comment[fr]=Tableur OASIS OpenDocument
 Comment[ga]=Scarbhileog OpenDocument OASIS
 Comment[gl]=Folla de Cálculo OASIS OpenDocument
