--- a/mimetypes/kde33/vnd.oasis.opendocument.text.desktop
+++ b/mimetypes/kde33/vnd.oasis.opendocument.text.desktop
@@ -16,6 +16,7 @@ Comment[es]=Texto de OASIS OpenDocument
 Comment[et]=OASIS OpenDocument tekst
 Comment[eu]=OASIS OpenDocument testua
 Comment[fa]=متن OASIS OpenDocument
+Comment[fi]=OASIS OpenDocument -teksti
 Comment[fr]=Texte OASIS OpenDocument
 Comment[ga]=Téacs OpenDocument OASIS
 Comment[gl]=Texto OASIS OpenDocument
