SVN_SILENT made messages (.desktop file)

--- a/kpresenter/templates/common_desktop/TitleLandscape.desktop
+++ b/kpresenter/templates/common_desktop/TitleLandscape.desktop
@@ -33,6 +33,7 @@ Name[nb]=Tittel
 Name[nds]=Titel
 Name[ne]=शीर्षक
 Name[nl]=Titel, landschap
+Name[oc]=Títol
 Name[pl]=Tytuł
 Name[pt]=Título
 Name[pt_BR]=Título
