--- a/kspread/kspread.desktop
+++ b/kspread/kspread.desktop
@@ -39,6 +39,7 @@ GenericName[ms]=Hamparan
 GenericName[nb]=Regneark
 GenericName[nds]=Tabellenutreken
 GenericName[ne]=स्प्रेडसिट
+GenericName[oc]=Fuèlhs de calcul
 GenericName[pl]=Arkusze kalkulacyjne
 GenericName[pt]=Folhas de cálculo
 GenericName[pt_BR]=Planilhas
