--- a/tools/quickprint/kformula_konqi.desktop
+++ b/tools/quickprint/kformula_konqi.desktop
@@ -36,6 +36,7 @@ Name[nb]=Skriv ut …
 Name[nds]=Drucken...
 Name[ne]=मुद्रण गर्नुहोस्...
 Name[nl]=Afdrukken...
+Name[oc]=Estampar...
 Name[pa]=ਛਾਪੋ...
 Name[pl]=Drukuj...
 Name[pt]=Imprimir...
