--- a/kspread/CMakeLists.txt
+++ b/kspread/CMakeLists.txt
@@ -15,6 +15,7 @@ include_directories( ${CMAKE_CURRENT_SOURCE_DIR}/tests
                      ${CMAKE_CURRENT_SOURCE_DIR}/ui
                      ${CMAKE_SOURCE_DIR}/interfaces
                      ${CMAKE_SOURCE_DIR}/kchart
+                     ${CMAKE_SOURCE_DIR}/kchart/kdchart/src
                      ${KOTEXT_INCLUDES}
                      ${KOGUIUTILS_INCLUDES}
                      ${EIGEN_INCLUDE_DIR} )
