SVN_SILENT made messages (.desktop file)

--- a/example/example.desktop
+++ b/example/example.desktop
@@ -10,6 +10,7 @@ Name[cy]=Cymhwysiad Enghreifftiol KOffice
 Name[da]=KOffice eksempel-program
 Name[de]=KOffice-Beispielprogramm
 Name[el]=Παράδειγμα εφαρμογής του KOffice
+Name[eo]=KOffice Ekzempla Aplikaĵo
 Name[es]=Aplicación de ejemplo de KOffice
 Name[et]=KOffice'i näidisrakendus
 Name[eu]=KOffice-en adibidezko aplikazioa
