--- a/example/examplepart.desktop
+++ b/example/examplepart.desktop
@@ -9,6 +9,7 @@ Name[cy]=Cydran Enghreifftiol KOffice
 Name[da]=KOffice eksempel-komponent
 Name[de]=KOffice-Beispielkomponente
 Name[el]=Παράδειγμα συστατικού του KOffice
+Name[eo]=KOffice Ekzempla Komponanto
 Name[es]=Componente de ejemplo de KOffice
 Name[et]=KOffice'i näidiskomponent
 Name[eu]=KOffice-en adibidezko osagaia
