--- a/filters/karbon/msod/karbon_msod_import.desktop
+++ b/filters/karbon/msod/karbon_msod_import.desktop
@@ -11,6 +11,7 @@ Name[cy]=Hidlen Fewnforio Lluniad MS Office Karbon
 Name[da]=Karbons MS Office-tegning-importfilter
 Name[de]=Karbon14 Importfilter für Microsoft Office-Zeichnungen
 Name[el]=Φίλτρο εισαγωγής MS Office Drawning του Karbon
+Name[eo]=Filtrilo por importado de MS-Oficeja desegno al Karbon
 Name[es]=Filtro de importación dibujo de MS Office de Karbon
 Name[et]=Karboni MS Office'i joonistuste impordifilter
 Name[eu]=Karbon-en MSG Office-en marrazkien inportaziorako iragazkia
