--- a/filters/karbon/svg/karbon_svg_import.desktop
+++ b/filters/karbon/svg/karbon_svg_import.desktop
@@ -12,6 +12,7 @@ Name[cy]=Hidlen Fewnforio SVG Karbon
 Name[da]=Karbon SVG-importfilter
 Name[de]=Karbon14 SVG-Importfilter
 Name[el]=Φίλτρο εισαγωγής SVG του Karbon
+Name[eo]=Karbon-SVG-importfiltrilo
 Name[es]=Filtro de importación de SVG de Karbon
 Name[et]=Karboni SVG impordifilter
 Name[eu]=Karbon-en SVG inportaziorako iragazkia
