--- a/filters/karbon/xaml/karbon_xaml_export.desktop
+++ b/filters/karbon/xaml/karbon_xaml_export.desktop
@@ -10,6 +10,7 @@ Name[cy]=Hidlen Allforio WVG Karbon14
 Name[da]=Karbon14 WVG-eksportfilter
 Name[de]=Karbon14 WVG-Exportfilter
 Name[el]=Φίλτρο εξαγωγής SVG του Karbon14
+Name[eo]=Karbon14-WVG-eksportfiltrilo
 Name[es]=Filtro de exportación a WVG de Karbon14
 Name[et]=Karbon14 WVG ekspordifilter
 Name[fa]=پالایۀ صادرات Karbon14 WVG
