--- a/filters/karbon/xaml/karbon_xaml_import.desktop
+++ b/filters/karbon/xaml/karbon_xaml_import.desktop
@@ -10,6 +10,7 @@ Name[cy]=Hidlen Fewnforio XAML Karbon
 Name[da]=Karbon XAML-importfilter
 Name[de]=Karbon14 XAML-Importfilter
 Name[el]=Φίλτρο εισαγωγής XAML του Karbon
+Name[eo]=Karbon-XAML-importfiltrilo
 Name[es]=Filtro de importación a XAML de Karbon
 Name[et]=Karboni XAML-i impordifilter
 Name[fa]=پالایۀ واردات Karbon XAML
