--- a/filters/karbon/xfig/karbon_xfig_import.desktop
+++ b/filters/karbon/xfig/karbon_xfig_import.desktop
@@ -11,6 +11,7 @@ Name[cy]=Hidlen Fewnforio XFig Karbon
 Name[da]=Karbon XFig-importfilter
 Name[de]=Karbon14 XFig-Importfilter
 Name[el]=Φίλτρο εισαγωγής XFig του Karbon
+Name[eo]=Karbon-XFig-importfiltrilo
 Name[es]=Filtro de importación XFig de Karbon
 Name[et]=Karboni XFig'i impordifilter
 Name[eu]=Karbon14-en XFig esportaziorako iragazkia
