--- a/filters/kivio/imageexport/kivio_image_export.desktop
+++ b/filters/kivio/imageexport/kivio_image_export.desktop
@@ -9,6 +9,7 @@ Name[ca]=Filtre d'exportació d'imatges per a Kivio
 Name[da]=Kivio billedeksportfilter
 Name[de]=Kivio Bild-Exportfilter
 Name[el]=Φίλτρο εξαγωγής εικόνας του Kivio
+Name[eo]=Kivio-bildeksportfiltrilo
 Name[es]=Filtro de exportación a imagen de Kivio
 Name[et]=Kivio pildi ekspordifilter
 Name[fa]=پالایۀ صادرات تصویر Kivio
