--- a/filters/kpresenter/jpeg/kpresenter_jpeg_export.desktop
+++ b/filters/kpresenter/jpeg/kpresenter_jpeg_export.desktop
@@ -9,6 +9,7 @@ Name[ca]=Filtre d'exportació JPEG per a KPresenter
 Name[da]=KPræsenter JPEG-eksportfilter
 Name[de]=KPresenter JPEG-Exportfilter
 Name[el]=Φίλτρο εξαγωγής JPEG του KPresenter
+Name[eo]=Prezentilo JPEG-eksportfiltrilo
 Name[es]=Filtro de exportación a JPEG para KPresenter
 Name[et]=KPresenteri JPEG ekspordifilter
 Name[fa]=پالایۀ صادرات KPresenter JPEG
