--- a/filters/karbon/oodraw/karbon_oodraw_import.desktop
+++ b/filters/karbon/oodraw/karbon_oodraw_import.desktop
@@ -11,6 +11,7 @@ Name[cy]=Hidlen Fewnforio OpenOffice.org Draw ar gyfer Karbon14
 Name[da]=OpenOffice.org Draw importfilter for Karbon14
 Name[de]=Karbon14 OpenOffice.org-Draw-Importfilter
 Name[el]=Φίλτρο εισαγωγής OpenOffice.org Draw για το Karbon14
+Name[eo]=OpenOffice.org desegno-importfiltrilo por Karbon14
 Name[es]=Filtro de importación de OpenOffice.org Draw para Karbon14
 Name[et]=Karbon14 OpenOffice.org Draw' impordifilter
 Name[eu]=Karbon14-en OpenOffice.org Draw-en inportaziorako iragazkia
