--- a/filters/karbon/wmf/karbon_wmf_export.desktop
+++ b/filters/karbon/wmf/karbon_wmf_export.desktop
@@ -11,6 +11,7 @@ Name[cy]=Hidlen Allforio WMF Karbon14
 Name[da]=Karbon14 WMF-eksportfilter
 Name[de]=Karbon14 WMF-Exportfilter
 Name[el]=Φίλτρο εξαγωγής WMF του Karbon14
+Name[eo]=Karbon14-WMF-eksportfiltrilo
 Name[es]=Filtro de exportación WMF de Karbon14
 Name[et]=Karbon14 WMF-i ekspordifilter
 Name[eu]=Karbon14-en WMF esportaziorako iragazkia
