--- a/filters/kpresenter/kword/kprkword.desktop
+++ b/filters/kpresenter/kword/kprkword.desktop
@@ -11,6 +11,7 @@ Name[cy]=Hidlen KWord KPresenter
 Name[da]=KPræsenter KWord-filter
 Name[de]=KPresenter KWord-Filter
 Name[el]=KPresenter KWord φίλτρο
+Name[eo]=Prezentilo KWord-filtrilo
 Name[es]=Filtro de KWord para KPresenter
 Name[et]=KPresenteri KWordi filter
 Name[eu]=KPresenter-en KWord iragazkia
