--- a/filters/kpresenter/magicpoint/kpresenter_magicpoint_import.desktop
+++ b/filters/kpresenter/magicpoint/kpresenter_magicpoint_import.desktop
@@ -12,6 +12,7 @@ Name[cy]=Hidlen Fewnforio Magicpoint i KPresenter
 Name[da]=Magicpoint import-filter for KPresenter
 Name[de]=KPresenter Magicpoint-Importfilter
 Name[el]=Φίλτρο εισαγωγής Magicpoint για το KPresenter
+Name[eo]=Magicpoint-importfiltrilo por Prezentilo
 Name[es]=Filtro de importación de Magicpoint para KPresenter
 Name[et]=KPresenteri Magicpoint'i impordifilter
 Name[eu]=KPresenter-en Magicpoint inportaziorako iragazkia
