--- a/filters/kchart/jpeg/kchart_jpeg_export.desktop
+++ b/filters/kchart/jpeg/kchart_jpeg_export.desktop
@@ -9,6 +9,7 @@ Name[ca]=Filtre d'exportació JPEG per a KChart
 Name[da]=KChart JPEG-eksportfilter
 Name[de]=KChart JPEG-Exportfilter
 Name[el]=Φίλτρο εξαγωγής JPEG του KChart
+Name[eo]=KChart-JPEG-eksportfiltrilo
 Name[es]=Filtro de exportación a JPEG para KChart
 Name[et]=KCharti JPEG ekspordifilter
 Name[fa]=پالایۀ صادرات KChart JPEG
