--- a/filters/kchart/png/kchart_png_export.desktop
+++ b/filters/kchart/png/kchart_png_export.desktop
@@ -11,6 +11,7 @@ Name[cy]=Hidlen Allforio PNG KChart
 Name[da]=KChart PNG-eksportfilter
 Name[de]=KChart PNG-Exportfilter
 Name[el]=Φίλτρο εξαγωγής PNG του KChart
+Name[eo]=KChart-PNG-eksportfiltrilo
 Name[es]=Filtro de exportación a PNG para KChart
 Name[et]=KCharti PNG ekspordifilter
 Name[eu]=KChart-en PNG esportaziorako iragazkia
