--- a/filters/kchart/svg/kchart_svg_export.desktop
+++ b/filters/kchart/svg/kchart_svg_export.desktop
@@ -11,6 +11,7 @@ Name[cy]=Hidlen Allforio SVG KChart
 Name[da]=KChart SVG-eksportfilter
 Name[de]=KChart SVG-Exportfilter
 Name[el]=Φίλτρο εξαγωγής SVG του KChart
+Name[eo]=KChart-SVG-eksportfiltrilo
 Name[es]=Filtro de exportación a SVG para KChart
 Name[et]=KCharti SVG ekspordifilter
 Name[eu]=KChart-en SVG esportaziorako iragazkia
