--- a/filters/kchart/xbm/kchart_xbm_export.desktop
+++ b/filters/kchart/xbm/kchart_xbm_export.desktop
@@ -9,6 +9,7 @@ Name[ca]=Filtre d'exportació XBM per a KChart
 Name[da]=KChart XBM-eksportfilter
 Name[de]=KChart XBM-Exportfilter
 Name[el]=Φίλτρο εξαγωγής XBM του KChart
+Name[eo]=KChart-XBM-eksportfiltrilo
 Name[es]=Filtro de exportación a XBM para KChart
 Name[et]=KCharti XBM-i ekspordifilter
 Name[fa]=پالایۀ صادرات KChart XBM
