--- a/filters/kformula/mathml/kformula_mathml_export.desktop
+++ b/filters/kformula/mathml/kformula_mathml_export.desktop
@@ -16,6 +16,7 @@ Name[cy]=Hidlen Allforio MathML KFormula
 Name[da]=KFormula MathML-eksportfilter
 Name[de]=KFormula MathML-Exportfilter
 Name[el]=Φίλτρο εξαγωγής MathML του KFormula
+Name[eo]=MathML-eksportfiltrilo por Formulilo
 Name[es]=Filtro de exportación a MathML de KFormula
 Name[et]=KFormula MathML'i ekspordifilter
 Name[eu]=KFormula-ren MathML esportaziorako iragazkia
