--- a/filters/kformula/mathml/kformula_mathml_import.desktop
+++ b/filters/kformula/mathml/kformula_mathml_import.desktop
@@ -16,6 +16,7 @@ Name[cy]=Hidlen Fewnforio MathML KFormula
 Name[da]=KFormula MathML-importfilter
 Name[de]=KFormula MathML-Importfilter
 Name[el]=Φίλτρο εισαγωγής MathML του KFormula
+Name[eo]=MathML-importfiltrilo por Formulilo
 Name[es]=Filtro de importación a MathML de KFormula
 Name[et]=KFormula MathML'i impordifilter
 Name[eu]=KFormula-ren MathML inportaziorako iragazkia
