--- a/filters/kformula/svg/kformula_svg_export.desktop
+++ b/filters/kformula/svg/kformula_svg_export.desktop
@@ -15,6 +15,7 @@ Name[cy]=Hidlen Allforio SVG KFormula
 Name[da]=KFormula SVG-eksportfilter
 Name[de]=KFormula SVG-Exportfilter
 Name[el]=Φίλτρο εξαγωγής SVG του KFormula
+Name[eo]=SVG-eksportfiltrilo por Formulilo
 Name[es]=Filtro de exportación a SVG de KFormula
 Name[et]=KFormula SVG ekspordifilter
 Name[fa]=پالایۀ صادرات KFormula SVG
