some gradient handling improvements * use a list of KoAbstractGradients in the resource server * use the KoresourceChooser to show the list of predefined gardients * preserve gradient positions when selecting predefined gradients * probably some other stuf i forgot

--- a/karbon/widgets/CMakeLists.txt
+++ b/karbon/widgets/CMakeLists.txt
@@ -4,6 +4,7 @@ set(karbonwidgets_SRCS
     KarbonCanvas.cpp
     vcolorslider.cc
     vgradientwidget.cc
+    KarbonGradientItem.cpp
     vgradienttabwidget.cc
     KarbonStylePreview.cpp
     vselecttoolbar.cc
