--- a/kugar/kudesigner/kudesigner.desktop
+++ b/kugar/kudesigner/kudesigner.desktop
@@ -133,7 +133,7 @@ Comment[x-test]=xxReport Designerxx
 Comment[xh]=Umyili Wengxelo
 Comment[zh_CN]=报告设计器
 Comment[zh_TW]=簡報設計家
-MimeType=application/x-kudesigner
+MimeType=application/x-kudesigner;
 X-KDE-NativeMimeType=application/x-kudesigner
 X-KDE-Library=libkudesignerpart
 ServiceTypes=KOfficePart,KParts/ReadOnlyPart,KParts/ReadWritePart
