--- a/karbon/data/karbon.desktop
+++ b/karbon/data/karbon.desktop
@@ -53,7 +53,7 @@ GenericName[x-test]=xxScalable Graphicsxx
 GenericName[xh]=Imizobo Ekalishekayo
 GenericName[zh_CN]=可缩放图像
 GenericName[zh_TW]=可縮放向量圖
-MimeType=application/vnd.oasis.opendocument.graphics;application/x-karbon;application/illustrator;image/x-eps;application/postscript
+MimeType=application/vnd.oasis.opendocument.graphics;application/x-karbon;application/illustrator;image/x-eps;application/postscript;
 # kghostview has 6 for application/postscript, we need to be under that...
 InitialPreference=5
 Type=Application
