--- a/karbon/data/karbonpart.desktop
+++ b/karbon/data/karbonpart.desktop
@@ -46,7 +46,7 @@ Name[x-test]=xxKOffice Scalable Graphics Componentxx
 Name[zh_CN]=KOffice 可缩放图像组件
 Name[zh_TW]=KOffice 可縮放圖片元件
 X-KDE-Library=libkarbonpart
-MimeType=application/x-karbon;application/illustrator;image/x-eps;application/postscript;application/vnd.oasis.opendocument.graphics;application/vnd.oasis.opendocument.graphics-template
+MimeType=application/x-karbon;application/illustrator;image/x-eps;application/postscript;application/vnd.oasis.opendocument.graphics;application/vnd.oasis.opendocument.graphics-template;
 # kghostview has 6 for application/postscript, we need to be under that...
 InitialPreference=5
 Type=Service
