--- a/kformula/kformula.desktop
+++ b/kformula/kformula.desktop
@@ -62,7 +62,7 @@ GenericName[x-test]=xxFormula Editorxx
 GenericName[xh]=Umhleli wendlela yokubala
 GenericName[zh_CN]=公式编辑器
 GenericName[zh_TW]=方程式編輯器
-MimeType=application/vnd.oasis.opendocument.formula;application/x-kformula
+MimeType=application/vnd.oasis.opendocument.formula;application/x-kformula;
 Type=Application
 Icon=kformula
 X-KDE-NativeMimeType=application/vnd.oasis.opendocument.formula
