--- a/karbon/plugins/tools/CMakeLists.txt
+++ b/karbon/plugins/tools/CMakeLists.txt
@@ -19,7 +19,7 @@ set(karbon_tools_PART_SRCS
 
 kde4_add_plugin(karbontools ${karbon_tools_PART_SRCS})
 
-target_link_libraries(karbontools ${KDE4_KPARTS_LIBS} koguiutils kopainter karboncommon )
+target_link_libraries(karbontools ${KDE4_KPARTS_LIBS} koguiutils karboncommon )
 
 install(TARGETS karbontools DESTINATION ${PLUGIN_INSTALL_DIR})
 
