--- a/kivio/src/part/kiviopart.desktop
+++ b/kivio/src/part/kiviopart.desktop
@@ -44,7 +44,7 @@ Name[x-test]=xxKOffice Flowchart & Diagram Editing Componentxx
 Name[zh_CN]=KOffice 流程图和图表编辑组件
 Name[zh_TW]=KOffice 流程圖 & 圖表編輯元件
 X-KDE-Library=libkiviopart
-MimeType=application/vnd.oasis.opendocument.graphics;application/x-kivio
+MimeType=application/vnd.oasis.opendocument.graphics;application/x-kivio;
 Type=Service
 ServiceTypes=KOfficePart,KParts/ReadOnlyPart,KParts/ReadWritePart
 X-KDE-NativeMimeType=application/vnd.oasis.opendocument.graphics
