--- a/example/x-vnd.kde.koexample.desktop
+++ b/example/x-vnd.kde.koexample.desktop
@@ -1,6 +1,6 @@
 [Desktop Entry]
 Encoding=UTF-8
-MimeType=application/x-vnd.kde.koexample
+MimeType=application/x-vnd.kde.koexample;
 #Comment=...
 Type=MimeType
 Patterns=*.xmpl;
