--- a/kivio/kiviopart/kivio.desktop
+++ b/kivio/kiviopart/kivio.desktop
@@ -51,7 +51,7 @@ GenericName[x-test]=xxFlowchart & Diagram Editingxx
 GenericName[xh]=Umzobo wokulandelana kweenkqubo & Uhlelo lomzobo
 GenericName[zh_CN]=流程图和图表编辑
 GenericName[zh_TW]=流程圖與圖表編輯
-MimeType=application/x-kivio
+MimeType=application/x-kivio;
 Type=Application
 Icon=kivio
 X-KDE-NativeMimeType=application/x-kivio
