--- a/kspread/kspread.desktop
+++ b/kspread/kspread.desktop
@@ -59,7 +59,7 @@ GenericName[wa]=Tåvleus
 GenericName[x-test]=xxSpreadsheetsxx
 GenericName[zh_CN]=电子表格
 GenericName[zh_TW]=Spread 表格
-MimeType=application/vnd.oasis.opendocument.spreadsheet;application/x-kspread;application/vnd.ms-excel;text/csv;application/x-quattropro
+MimeType=application/vnd.oasis.opendocument.spreadsheet;application/x-kspread;application/vnd.ms-excel;text/csv;application/x-quattropro;
 Type=Application
 Icon=kspread
 X-KDE-NativeMimeType=application/vnd.oasis.opendocument.spreadsheet
