--- a/kugar/part/kugar.desktop
+++ b/kugar/part/kugar.desktop
@@ -6,7 +6,7 @@ Name[ne]=कुगर
 Name[x-test]=xxKugarxx
 Exec=kugar %u
 Icon=kugar
-MimeType=application/x-kugar;application/x-vnd.kde.kugar.mixed
+MimeType=application/x-kugar;application/x-vnd.kde.kugar.mixed;
 Type=Application
 DocPath=kugar/index.html
 GenericName=Report Generator
