--- a/kformula/kformulapart.desktop
+++ b/kformula/kformulapart.desktop
@@ -45,7 +45,7 @@ Name[x-test]=xxKOffice Formula Componentxx
 Name[zh_CN]=KOffice 公式组件
 Name[zh_TW]=KOffice Formula 元件
 X-KDE-Library=libkformulapart
-MimeType=application/vnd.oasis.opendocument.formula;application/vnd.oasis.opendocument.formula-template;application/x-kformula;text/mathml
+MimeType=application/vnd.oasis.opendocument.formula;application/vnd.oasis.opendocument.formula-template;application/x-kformula;text/mathml;
 Type=Service
 ServiceTypes=KOfficePart,KParts/ReadOnlyPart,KParts/ReadWritePart
 X-KDE-NativeMimeType=application/vnd.oasis.opendocument.formula
