added vCard import script.

--- a/kspread/plugins/scripting/scripts/CMakeLists.txt
+++ b/kspread/plugins/scripting/scripts/CMakeLists.txt
@@ -4,6 +4,7 @@ install(FILES
 
 install(FILES
     csvimport.py csvexport.py csvoptions.ui
+    vcardimport.py
     kexidbimport.py kexidbexport.py
     htmlexport.py htmlexportinfos.ui
     odfpyexport.py
