Added the consoledocker.py Python script that provides us a interactive python console as Docker-widget. This script depends on PyQt4 since we embed a gui-editor widget that way.
FEATURE

--- a/kspread/plugins/scripting/scripts/CMakeLists.txt
+++ b/kspread/plugins/scripting/scripts/CMakeLists.txt
@@ -18,3 +18,7 @@ install(FILES
     yfinance.py yweather.py
     pytime.py pyregexp.py
     DESTINATION ${DATA_INSTALL_DIR}/kspread/scripts/functions)
+
+install(FILES
+    consoledocker.py
+    DESTINATION ${DATA_INSTALL_DIR}/kspread/scripts/docker)
