enable the console per default. it will be disabled if krosspython is not installed anyway.

--- a/kspread/plugins/scripting/scripts/scripts.rc
+++ b/kspread/plugins/scripting/scripts/scripts.rc
@@ -103,7 +103,7 @@
            name="pyconsoledocker"
            text="Python Console"
            comment="Interactive Python Console Docker"
-           enabled="false"
+           enabled="true"
            interpreter="python"
            file="docker/consoledocker.py" />
     </collection>
