SVN_SILENT made messages (.desktop file)

--- a/templates/Illustration.desktop
+++ b/templates/Illustration.desktop
@@ -26,11 +26,11 @@ Name[ja]=Illustration ドキュメント...
 Name[km]=ឯកសារ​រូបភាព​លម្អ...
 Name[lv]=Ilustrācijas dokuments...
 Name[ms]=Dokumen Ilustrasi...
-Name[nb]=Illustrasjon ...
+Name[nb]=Illustrasjon …
 Name[nds]=Afbillen-Dokment...
 Name[ne]=दृष्टान्त कागजात...
 Name[nl]=Illustratiedocument...
-Name[nn]=Illustrasjon ...
+Name[nn]=Illustrasjon …
 Name[pl]=Ilustracja...
 Name[pt]=Documento de Ilustração....
 Name[pt_BR]=Documento de Ilustração...
