--- a/templates/SpreadSheet.desktop
+++ b/templates/SpreadSheet.desktop
@@ -28,11 +28,11 @@ Name[ja]=表計算ドキュメント...
 Name[km]=ឯកសារ​សៀវភៅ​បញ្ជី​...
 Name[lv]=Tabullapas dokuments..
 Name[ms]=Dokumen Hamparan...
-Name[nb]=Regneark ...
+Name[nb]=Regneark …
 Name[nds]=Tabellenutreken-Dokment...
 Name[ne]=स्प्रेडसिट कागजात...
 Name[nl]=Spreadsheetdocument...
-Name[nn]=Rekneark ...
+Name[nn]=Rekneark …
 Name[pl]=Arkusz kalkulacyjny...
 Name[pt]=Documento de Folha de Cálculo...
 Name[pt_BR]=Planilha de Cálculo...
