--- a/templates/TextDocument.desktop
+++ b/templates/TextDocument.desktop
@@ -29,11 +29,11 @@ Name[km]=ឯកសារ​អត្ថបទ​...
 Name[lt]=Tekstinis dokumentas...
 Name[lv]=Teksta dokuments...
 Name[ms]=Dokumen Teks...
-Name[nb]=Tekstdokument ...
+Name[nb]=Tekstdokument …
 Name[nds]=Textdokment...
 Name[ne]=पाठ कागजात...
 Name[nl]=Tekstdocument...
-Name[nn]=Tekstdokument ...
+Name[nn]=Tekstdokument …
 Name[pa]=ਪਾਠ ਦਸਤਾਵੇਜ਼...
 Name[pl]=Dokument tekstowy...
 Name[pt]=Documento de Texto...
