--- a/templates/Presentation.desktop
+++ b/templates/Presentation.desktop
@@ -27,11 +27,11 @@ Name[ja]=プレゼンテーションドキュメント...
 Name[km]=ឯកសារ​ការ​បង្ហាញ...
 Name[lv]=Prezentācijas dokuments...
 Name[ms]=Dokumen Persembahan...
-Name[nb]=Presentasjon ...
+Name[nb]=Presentasjon …
 Name[nds]=Presentatschoon-Dokment...
 Name[ne]=प्रस्तुतिकरण कागजात...
 Name[nl]=Presentatie-document...
-Name[nn]=Presentasjon ...
+Name[nn]=Presentasjon …
 Name[pl]=Prezentacja...
 Name[pt]=Documento de Apresentação...
 Name[pt_BR]=Apresentação de Slides...
