--- a/tools/quickprint/kexi_konqi.desktop
+++ b/tools/quickprint/kexi_konqi.desktop
@@ -34,11 +34,11 @@ Name[km]=បោះពុម្ព​...
 Name[lo]=ເຄື່ອງພິມ - K
 Name[lv]=Drukāt...
 Name[ms]=Cetak...
-Name[nb]=Skriv ut ...
+Name[nb]=Skriv ut …
 Name[nds]=Drucken...
 Name[ne]=मुद्रण गर्नुहोस्...
 Name[nl]=Afdrukken...
-Name[nn]=Skriv ut ...
+Name[nn]=Skriv ut …
 Name[pa]=ਛਾਪੋ...
 Name[pl]=Drukuj...
 Name[pt]=Imprimir...
