--- a/example/examplepart.desktop
+++ b/example/examplepart.desktop
@@ -49,7 +49,7 @@ Name[x-test]=xxKOffice Example Componentxx
 Name[zh_CN]=KOffice 组件范例
 Name[zh_TW]=KOffice 範例元件
 X-KDE-Library=libkoexamplepart
-MimeType=application/x-vnd.kde.koexample
+MimeType=application/x-vnd.kde.koexample;
 Type=Service
 ServiceTypes=KOfficePart,KParts/ReadOnlyPart,KParts/ReadWritePart
 X-KDE-NativeMimeType=application/x-vnd.kde.koexample
