--- a/example/example.desktop
+++ b/example/example.desktop
@@ -52,7 +52,7 @@ Name[x-test]=xxKOffice Example Applicationxx
 Name[zh_CN]=KOffice 应用程序范例
 Name[zh_TW]=KOffice 範例應用程式
 Exec=example
-MimeType=application/x-example
+MimeType=application/x-example;
 Type=Application
 Icon=example
 Categories=Qt;KDE;Office;
