--- a/kpresenter/kpresenter.desktop
+++ b/kpresenter/kpresenter.desktop
@@ -63,7 +63,7 @@ GenericName[x-test]=xxSlide Presentationsxx
 GenericName[xh]=Iziboniso Ezityibilikayo
 GenericName[zh_CN]=幻灯片演示
 GenericName[zh_TW]=自動撥放
-MimeType=application/vnd.oasis.opendocument.presentation;application/vnd.oasis.opendocument.presentation-template;application/x-kpresenter;application/mspowerpoint
+MimeType=application/vnd.oasis.opendocument.presentation;application/vnd.oasis.opendocument.presentation-template;application/x-kpresenter;application/mspowerpoint;
 Type=Application
 Icon=kpresenter
 X-KDE-NativeMimeType=application/vnd.oasis.opendocument.presentation
