--- a/kpresenter/part/kpresenterpart.desktop
+++ b/kpresenter/part/kpresenterpart.desktop
@@ -11,7 +11,7 @@ Name[sv]=Kpresenter
 Name[tr]=Kpresenter
 Name[x-test]=xxKPresenterxx
 X-KDE-Library=libkpresenterpart
-MimeType=application/vnd.oasis.opendocument.presentation;application/vnd.oasis.opendocument.presentation-template;application/x-kpresenter;application/mspowerpoint
+MimeType=application/vnd.oasis.opendocument.presentation;application/vnd.oasis.opendocument.presentation-template;application/x-kpresenter;application/mspowerpoint;
 Type=Service
 ServiceTypes=KOfficePart,KParts/ReadOnlyPart,KParts/ReadWritePart
 X-KDE-NativeMimeType=application/vnd.oasis.opendocument.presentation
