--- a/kspread/kspreadpart.desktop
+++ b/kspread/kspreadpart.desktop
@@ -44,7 +44,7 @@ Name[x-test]=xxKOffice Spreadsheet Componentxx
 Name[zh_CN]=KOffice 电子表格组件
 Name[zh_TW]=KOffice 工作表元件
 X-KDE-Library=libkspreadpart
-MimeType=application/vnd.oasis.opendocument.spreadsheet;application/vnd.oasis.opendocument.spreadsheet-template;application/x-kspread;application/vnd.ms-excel;text/csv;application/x-quattropro
+MimeType=application/vnd.oasis.opendocument.spreadsheet;application/vnd.oasis.opendocument.spreadsheet-template;application/x-kspread;application/vnd.ms-excel;text/csv;application/x-quattropro;
 Type=Service
 ServiceTypes=KOfficePart,KParts/ReadOnlyPart,KParts/ReadWritePart
 X-KDE-NativeOasisMimeType=application/vnd.oasis.opendocument.spreadsheet
