--- a/kugar/part/kugarpart.desktop
+++ b/kugar/part/kugarpart.desktop
@@ -42,7 +42,7 @@ Name[wa]=Componint djenerateu d' rapoirts di KOffice
 Name[x-test]=xxKOffice Report Generator Componentxx
 Name[zh_CN]=KOffice 报告生成组件
 Name[zh_TW]=KOffice 報告產生元件
-MimeType=application/x-kugar;application/x-vnd.kde.kugar.mixed
+MimeType=application/x-kugar;application/x-vnd.kde.kugar.mixed;
 Type=Service
 Terminal=false
 ServiceTypes=KOfficePart,KParts/ReadOnlyPart,Browser/View
