Adapt servicemenus and install them in services/ServiceMenus

--- a/tools/quickprint/CMakeLists.txt
+++ b/tools/quickprint/CMakeLists.txt
@@ -1,3 +1,6 @@
 
-install( FILES  kchart_konqi.desktop karbon_konqi.desktop kspread_konqi.desktop  kformula_konqi.desktop kpresenter_konqi.desktop kword_konqi.desktop kexi_konqi.desktop krita_konqi.desktop kivio_konqi.desktop  DESTINATION ${DATA_INSTALL_DIR}/konqueror/servicemenus)
+install( FILES  kchart_konqi.desktop karbon_konqi.desktop
+kspread_konqi.desktop  kformula_konqi.desktop kpresenter_konqi.desktop
+kword_konqi.desktop kexi_konqi.desktop krita_konqi.desktop kivio_konqi.desktop
+DESTINATION ${SERVICES_INSTALL_DIR}/ServiceMenus)
 
