--- a/tools/quickprint/kexi_konqi.desktop
+++ b/tools/quickprint/kexi_konqi.desktop
@@ -1,6 +1,6 @@
 [Desktop Entry]
 Encoding=UTF-8
-ServiceTypes=application/x-kexi
+ServiceTypes=KonqPopupMenu/Plugin,application/x-kexi
 Type=Service
 Actions=Print;
 
