--- a/tools/thumbnail/clipartthumbnail.desktop
+++ b/tools/thumbnail/clipartthumbnail.desktop
@@ -33,6 +33,6 @@ Name[x-test]=xxClipartxx
 Name[zh_CN]=剪贴画
 Name[zh_TW]=剪貼板
 ServiceTypes=ThumbCreator
-MimeTypes=image/wmf;
+MimeType=image/wmf;
 X-KDE-Library=clipartthumbnail
 CacheThumbnail=true
