--- a/kpresenter/part/kpresenter.rc
+++ b/kpresenter/part/kpresenter.rc
@@ -6,6 +6,10 @@
             <Action name="edit_undo"/>
             <Action name="edit_redo"/>
             <Separator/>
+            <Action name="edit_cut"/>
+            <Action name="edit_copy"/>
+            <Action name="edit_paste"/>
+            <Separator/>
             <Action name="edit_insertpage"/>
             <Action name="edit_deletepage"/>
             <Separator/>
