--- a/karbon/core/CMakeLists.txt
+++ b/karbon/core/CMakeLists.txt
@@ -1,4 +1,4 @@
-include_directories( ${KDE4_INCLUDE_DIR} ${QT_INCLUDES} ${KOGUIUTILS_INCLUDES} ${KOPAINTER_INCLUDES} ${CMAKE_SOURCE_DIR}/karbon ${FREETYPE_INCLUDE_DIR} ${FreeType2_INCLUDE_DIR} ${FONTCONFIG_INCLUDE_DIR} )
+include_directories( ${KDE4_INCLUDE_DIR} ${QT_INCLUDES} ${KOGUIUTILS_INCLUDES} ${CMAKE_SOURCE_DIR}/karbon ${FREETYPE_INCLUDE_DIR} ${FreeType2_INCLUDE_DIR} ${FONTCONFIG_INCLUDE_DIR} )
 
 #add_definitions(${FREETYPE_INCLUDE_DIR})
 
