--- a/filters/karbon/png/CMakeLists.txt
+++ b/filters/karbon/png/CMakeLists.txt
@@ -1,6 +1,6 @@
 
 
-include_directories( ${CMAKE_SOURCE_DIR}/karbon ${CMAKE_SOURCE_DIR}/karbon/core ${KDE4_INCLUDES}  )
+include_directories( ${CMAKE_SOURCE_DIR}/karbon ${CMAKE_SOURCE_DIR}/karbon/core ${KOGUIUTILS_INCLUDES} ${KDE4_INCLUDES}  )
 
 
 ########### next target ###############
