--- a/karbon/dialogs/CMakeLists.txt
+++ b/karbon/dialogs/CMakeLists.txt
@@ -1,4 +1,4 @@
-include_directories( ${KDE4_INCLUDE_DIR} ${QT_INCLUDES} ${KOPAINTER_INCLUDES} ${CMAKE_SOURCE_DIR}/karbon )
+include_directories( ${KDE4_INCLUDE_DIR} ${QT_INCLUDES} ${CMAKE_SOURCE_DIR}/karbon )
 
 set(karbondialogs_SRCS
 #    vcolordlg.cc 
