--- a/kivio/plugins/kiviotargettool/CMakeLists.txt
+++ b/kivio/plugins/kiviotargettool/CMakeLists.txt
@@ -12,7 +12,7 @@ kde4_add_plugin(kiviotargettool WITH_PREFIX ${kiviotargettool_PART_SRCS})
 
 
 
-target_link_libraries(kiviotargettool  ${KDE4_KDECORE_LIBS} kotext kopainter kiviocommon )
+target_link_libraries(kiviotargettool  ${KDE4_KDECORE_LIBS} kotext kiviocommon )
 
 install(TARGETS kiviotargettool  DESTINATION ${PLUGIN_INSTALL_DIR})
 
