--- a/libs/kopageapp/tests/CMakeLists.txt
+++ b/libs/kopageapp/tests/CMakeLists.txt
@@ -13,7 +13,6 @@ target_link_libraries(TestPAPageInsertCommand  ${KDE4_KDECORE_LIBS} kopageapp ${
 
 set(TestPAPageDeleteCommand_test_SRCS TestPAPageDeleteCommand.cpp )
 
-
 kde4_add_unit_test(TestPAPageDeleteCommand TESTNAME libs-kopageapp-TestPAPageDeleteCommand  ${TestPAPageDeleteCommand_test_SRCS})
 
 target_link_libraries(TestPAPageDeleteCommand  ${KDE4_KDECORE_LIBS} kopageapp ${QT_QTTEST_LIBRARY})
@@ -22,9 +21,16 @@ target_link_libraries(TestPAPageDeleteCommand  ${KDE4_KDECORE_LIBS} kopageapp ${
 
 set(TestPAPageMoveCommand_test_SRCS TestPAPageMoveCommand.cpp )
 
-
 kde4_add_unit_test(TestPAPageMoveCommand TESTNAME libs-kopageapp-TestPAPageMoveCommand  ${TestPAPageMoveCommand_test_SRCS})
 
 target_link_libraries(TestPAPageMoveCommand  ${KDE4_KDECORE_LIBS} kopageapp ${QT_QTTEST_LIBRARY})
+
+########### next target ###############
+
+set(TestPACopyPastePage_test_SRCS TestPACopyPastePage.cpp )
+
+kde4_add_unit_test(TestPACopyPastePage TESTNAME libs-kopageapp-TestPACopyPastePage  ${TestPACopyPastePage_test_SRCS})
+
+target_link_libraries(TestPACopyPastePage  ${KDE4_KDECORE_LIBS} kopageapp ${QT_QTTEST_LIBRARY})
 
 ########### next target ###############
