SVN_SILENT made messages (.desktop file)

--- a/kpresenter/templates/Screenpresentations/BlueBreezeDouble.desktop
+++ b/kpresenter/templates/Screenpresentations/BlueBreezeDouble.desktop
@@ -53,6 +53,7 @@ Comment[el]=Μια ήρεμη παρουσίαση με τίτλο και δύο
 Comment[es]=Una presentación tranquila con un título y dos columnas de texto
 Comment[et]=Lihtne esitlus pealkirja ja kahe tekstiveeruga
 Comment[fa]=ارائه‌ای آرام با یک عنوان و دو ستون متن
+Comment[fi]=Rauhallinen esitys, otsikko ja kaksi tekstipalstaa
 Comment[fr]=Une présentation apaisée avec un titre et deux colonnes de texte
 Comment[gl]=Unha presentación cun título e duas colunas de texto
 Comment[he]=מצגת שלווה עם כותרת ושתי עמודות
