--- a/kpresenter/templates/Screenpresentations/savannah.desktop
+++ b/kpresenter/templates/Screenpresentations/savannah.desktop
@@ -4,6 +4,7 @@ Icon=template_savannah
 Name=Savannah
 Name[de]=Savanne
 Name[el]=Σαβάνα
+Name[fi]=Savanni
 Name[fr]=Savane
 Name[ga]=Sabhána
 Name[hu]=Szavanna
@@ -33,6 +34,7 @@ Comment[el]=Σαβάνα από dannya
 Comment[eo]=Savannah far dannya
 Comment[es]=Savannah por dannya
 Comment[et]='dannya' loodud Savannah
+Comment[fi]=Savanni. tehnyt dannya
 Comment[fr]=Savane par Dannya
 Comment[ga]=Sabhána le dannya
 Comment[gl]=Savannah por dannya
