--- a/kspread/templates/HomeFamily/BMI.desktop
+++ b/kspread/templates/HomeFamily/BMI.desktop
@@ -60,6 +60,7 @@ Comment[el]=Απλός υπολογιστής δείκτη σωματικής μ
 Comment[es]=Calculadora sencilla de índices de masas de cuerpos
 Comment[et]=Lihtne kehakaalu indeksi kalkulaator
 Comment[fa]=ماشین‌حساب نمایۀ حجم بدنۀ ساده
+Comment[fi]=Yksinkertainen painoindeksilaskin.
 Comment[fr]=Simple calculatrice d'index de masse corporelle.
 Comment[gl]=Calculadora Simples do Índice de Masa Corporal
 Comment[he]=מחשבון פשוט לחישוב מדד מסת גוף (BMI).
