--- a/kpresenter/templates/Screenpresentations/BlueBreezeSingle.desktop
+++ b/kpresenter/templates/Screenpresentations/BlueBreezeSingle.desktop
@@ -53,6 +53,7 @@ Comment[el]=Μια ήρεμη παρουσίαση με τίτλο και μια
 Comment[es]=Una presentación tranquila con un título un área grande texto
 Comment[et]=Lihtne esitlus pealkirja ja ühe suure tekstialaga
 Comment[fa]=ارائه‌ای آرام با یک عنوان و تک‌متن بزرگ
+Comment[fi]=Rauhallinen esitys, otsikko ja yksi suuri tekstialue
 Comment[fr]=Une présentation apaisée avec un titre et un seul grand texte
 Comment[gl]=Unha presentación cun título e unha única área de texto grande
 Comment[he]=מצגת שלווה עם כותרת ואיזור גדול לתמונה
