--- a/kpresenter/templates/Screenpresentations/classroom.desktop
+++ b/kpresenter/templates/Screenpresentations/classroom.desktop
@@ -9,6 +9,7 @@ Name[el]=Σχολική τάξη
 Name[eo]=Klasĉambro
 Name[et]=Klassituba
 Name[fa]=کلاس
+Name[fi]=Luokkahuone
 Name[fr]=Salle de classe
 Name[ga]=Seomra Ranga
 Name[gl]=Aula
@@ -45,6 +46,7 @@ Comment[eo]=Klasĉambro far dannya
 Comment[es]=Classroom por dannya
 Comment[et]='dannya' loodud klassituba
 Comment[fa]=کلاس با dannya
+Comment[fi]=Luokkahuone
 Comment[fr]=Salle de classe, par Dannya
 Comment[gl]=Aula por dannya
 Comment[hu]=Osztályterem, készítette: dannya
