--- a/kpresenter/templates/common_desktop/TitleLandscape.desktop
+++ b/kpresenter/templates/common_desktop/TitleLandscape.desktop
@@ -65,6 +65,7 @@ Comment[eo]=Prezentado kun paghtitolo
 Comment[es]=Presentación con un título de página
 Comment[et]=Esitlus lehekülje pealkirjaga
 Comment[fa]=ارائه با یک عنوان صفحه
+Comment[fi]=Esitys, jossa otsikko
 Comment[fr]=Présentation avec un titre de page
 Comment[gl]=Presentación cunha páxina de título
 Comment[he]=מצגת עם כותרת עמוד
