--- a/kpresenter/templates/common_desktop/TitlePortrait.desktop
+++ b/kpresenter/templates/common_desktop/TitlePortrait.desktop
@@ -62,6 +62,7 @@ Comment[el]=Παρουσίαση με τίτλο μίας σελίδας (διά
 Comment[es]=Presentación con un título de página (orientación vertical)
 Comment[et]=Esitlus lehekülje pealkirjaga (püstpaigutus)
 Comment[fa]=ارائه با یک عنوان صفحه )جهت طولی(
+Comment[fi]=Esitys, jossa otsikko (pystysuuntainen)
 Comment[fr]=Présentation avec un titre de page (portrait)
 Comment[gl]=Presentación cunha páxina de título (orientada en vertical)
 Comment[hu]=Bemutató címoldallal (álló tájolással)
