--- a/kpresenter/templates/common_desktop/TwoColumnPortrait.desktop
+++ b/kpresenter/templates/common_desktop/TwoColumnPortrait.desktop
@@ -62,6 +62,7 @@ Comment[el]=Παρουσίαση με τίτλο μίας σελίδας και 
 Comment[es]=Presentación con un título de página y dos columnas de textos (orientación vertical)
 Comment[et]=Esitlus lehekülje pealkirjaga ja kahe tekstiveeruga (püstpaigutus)
 Comment[fa]=ارائه با یک عنوان صفحه و دو ستون متن )جهت طولی(
+Comment[fi]=Esitys, jossa otsikko ja kaksi tekstipalstaa (pystysuuntainen)
 Comment[fr]=Présentation avec un titre de page et deux colonnes de texte (portrait)
 Comment[gl]=Presentación cunha páxina de título e duas colunas de texto (orientadas en vertical)
 Comment[hu]=Bemutató címmel és két szöveges oszloppal (álló)
