--- a/kword/templates/Wordprocessing/ColorfulLetter.desktop
+++ b/kword/templates/Wordprocessing/ColorfulLetter.desktop
@@ -14,6 +14,7 @@ Name[eo]=Kolora dokumento
 Name[es]=Documento a todo color
 Name[et]=Värviline dokument
 Name[fa]=سند رنگی
+Name[fi]=Värikäs asiakirja
 Name[fr]=Document coloré
 Name[ga]=Cáipéis Ildathach
 Name[gl]=Documento Colorido
@@ -53,6 +54,7 @@ Comment[en_GB]=A two-column template with stylishly coloured headers and footers
 Comment[es]=Una plantilla con dos columnas con encabezados y pies con colores elegantes
 Comment[et]=Kahe veeruga dokument stiilselt värviliste päiste ja jalustega
 Comment[fa]=قالب دو ستونی با عناوین و زیرنویسهای رنگی شیک
+Comment[fi]=Kaksipalstainen pohja, värilliset ylä- ja alatunnisteet
 Comment[fr]=Un modèle à deux colonnes avec des en-têtes colorées et des pieds de page
 Comment[gl]=Un modelo a dúas colunas, con cabeceiras e rodapés con estilos coloridos
 Comment[hu]=Kétoszlopos sablon stílusos, színes fejléccel és lábléccel
