--- a/kword/templates/Wordprocessing/Memo.desktop
+++ b/kword/templates/Wordprocessing/Memo.desktop
@@ -41,6 +41,7 @@ Comment[el]=Βασικό πρότυπο για τη γρήγορη γραφή ε
 Comment[es]=Plantilla básica para escribir rápidamente un memorando con buen aspecto
 Comment[et]=Mall korraliku memo kiireks kirjapanemiseks
 Comment[fa]=قالب پایه‌ای برای نوشتن سریع یک نامۀ غیررسمی زیبا
+Comment[fi]=Yksinkertainen pohja muistioita varten
 Comment[fr]=Modèle de base pour écrire rapidement un joli mémo
 Comment[gl]=Modelo básico para criar rapidamente un memorando con bon aspeito
 Comment[hu]=Egyszerű sablon elegáns megjelenésű beadvány gyors létrehozásához
