--- a/libs/main/kodocinfopropspage.desktop
+++ b/libs/main/kodocinfopropspage.desktop
@@ -16,6 +16,7 @@ Name[es]=Página de propiedades de información de documentos de KOffice
 Name[et]=KOffice'i dokumendiinfo omaduste lehekülg
 Name[eu]=KOffice-en dokumentuen informazio-propietateen orria
 Name[fa]=صفحۀ ویژگیهای اطلاعات سند KOffice
+Name[fi]=KOffice-asiakirjan tietosivu
 Name[fr]=Page des propriétés d'un document KOffice
 Name[gl]=Páxina de Información das Propiedades do Documento de KOffice
 Name[he]=דף מאפיינים לגבי מידע מסמך של KOffice
