--- a/libs/pigment/pigmentextension.desktop
+++ b/libs/pigment/pigmentextension.desktop
@@ -3,6 +3,7 @@ Encoding=UTF-8
 Type=ServiceType
 X-KDE-ServiceType=KOffice/ColorSpaceExtension
 Comment=A module implementing an extension to a colorspace of the Pigment Color Manipulation System
+Comment[el]=Ένα άρθρωμα που υλοποιεί μια επέκταση σε έναν χρωματικό χώρο με χρήση του συστήματος χειρισμού χρωμάτων βαφής
 Comment[es]=Un módulo que implementa una extensión a un espacio de color del sistema de manipulación de colores Pigment
 Comment[pt]=Um módulo que implementa um espaço de cores completo para usar com o Sistema de Manipulação de Cores por Pigmentos
 Comment[pt_BR]=Um módulo que implementa um espaço de cores completo para usar com o Sistema de Manipulação de Cores por Pigmentos
