--- a/plugins/variables/textvariables.desktop
+++ b/plugins/variables/textvariables.desktop
@@ -7,6 +7,7 @@ Name[de]=Textvariablen
 Name[el]=Μεταβλητές κειμένου
 Name[es]=Variables de texto
 Name[fa]=متغیرهای متن
+Name[fi]=Tekstimuuttujat
 Name[ja]=テキスト変数
 Name[ne]=पाठ चल
 Name[pt]=Variáveis de Texto
