refactor some of the actions to have less code duplication

--- a/shapes/musicshape/CMakeLists.txt
+++ b/shapes/musicshape/CMakeLists.txt
@@ -47,6 +47,7 @@ SET (musicshape_LIB_SRCS
     dialogs/StaffElementPreviewWidget.cpp
 
     actions/AbstractMusicAction.cpp
+    actions/AbstractNoteMusicAction.cpp
     actions/NoteEntryAction.cpp
     actions/AccidentalAction.cpp
     actions/EraserAction.cpp
