--- a/karbon/plugins/CMakeLists.txt
+++ b/karbon/plugins/CMakeLists.txt
@@ -4,5 +4,5 @@ add_subdirectory( insertknots )
 add_subdirectory( whirlpinch )
 #add_subdirectory( shadoweffect )
 add_subdirectory( tools )
-add_subdirectory( dockers )
+#add_subdirectory( dockers )
 
