Added the docker script snippetsdocker.rb written in Ruby using QtRuby4.
see also http://techbase.kde.org/Development/Tutorials/KSpread_Scripting#Ruby_Snippets

CC_MAIL:cyb@lepi.org

--- a/kspread/plugins/scripting/scripts/CMakeLists.txt
+++ b/kspread/plugins/scripting/scripts/CMakeLists.txt
@@ -21,4 +21,5 @@ install(FILES
 
 install(FILES
     consoledocker.py
+    snippetsdocker.rb
     DESTINATION ${DATA_INSTALL_DIR}/kspread/scripts/docker)
