GenericName like OOWriter and AbiWord

--- a/kword/kword.desktop
+++ b/kword/kword.desktop
@@ -7,7 +7,7 @@ Name[ne]=केडीई वर्ड
 Name[sv]=Kword
 Name[x-test]=xxKWordxx
 Exec=kword %u
-GenericName=Word Processing
+GenericName=Word Processor
 GenericName[af]=Woord Verwerking
 GenericName[bg]=Текстообработка
 GenericName[ca]=Processador de textos
