GenericName like OOCalc and Gnumeric

--- a/kspread/kspread.desktop
+++ b/kspread/kspread.desktop
@@ -6,7 +6,7 @@ Name[ne]=केडीई स्प्रेड
 Name[sv]=Kspread
 Name[x-test]=xxKSpreadxx
 Exec=kspread %u
-GenericName=Spreadsheets
+GenericName=Spreadsheet
 GenericName[af]=Spreiblad
 GenericName[bg]=Електронна таблица
 GenericName[br]=Logerioù
