--- a/kspread/kspreadpart.desktop
+++ b/kspread/kspreadpart.desktop
@@ -51,7 +51,7 @@ ServiceTypes=KOfficePart,KParts/ReadOnlyPart,KParts/ReadWritePart
 X-KDE-NativeOasisMimeType=application/vnd.oasis.opendocument.spreadsheet
 X-KDE-NativeMimeType=application/vnd.oasis.opendocument.spreadsheet
 X-KDE-ExtraNativeMimeTypes=application/vnd.oasis.opendocument.spreadsheet-template,application/x-kspread
-GenericName=Spreadsheets
+GenericName=Spreadsheet
 GenericName[af]=Spreiblad
 GenericName[bg]=Електронна таблица
 GenericName[br]=Logerioù
