GenericName like OOImpress

--- a/kpresenter/kpresenter.desktop
+++ b/kpresenter/kpresenter.desktop
@@ -10,7 +10,7 @@ Name[sv]=Kpresenter
 Name[tr]=Kpresenter
 Name[x-test]=xxKPresenterxx
 Exec=kpresenter %u
-GenericName=Slide Presentations
+GenericName=Presentation
 GenericName[af]=Skuif Voorleggings
 GenericName[bg]=Презентации
 GenericName[br]=Emginnigoù skeudenn
