--- a/kpresenter/kpresenterpart.desktop
+++ b/kpresenter/kpresenterpart.desktop
@@ -16,7 +16,7 @@ ServiceTypes=KOfficePart,KParts/ReadOnlyPart,KParts/ReadWritePart
 X-KDE-NativeMimeType=application/vnd.oasis.opendocument.presentation
 X-KDE-NativeOasisMimeType=application/vnd.oasis.opendocument.presentation
 X-KDE-ExtraNativeMimeTypes=application/x-kpresenter,application/vnd.oasis.opendocument.presentation-template
-GenericName=Slide Presentations
+GenericName=Presentation
 GenericName[af]=Skuif Voorleggings
 GenericName[bg]=Презентации
 GenericName[br]=Emginnigoù skeudenn
